Working on fluent configuration

--- a/HibernateTest/WebTest/Web.config
+++ b/HibernateTest/WebTest/Web.config
@@ -12,6 +12,10 @@
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 
+  <appSettings>
+    <add key="ConnectionString" value="User ID=aida;Password=FPaida1234;Data Source=win-aida/ORCL"/>
+  </appSettings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
 
