First reference mapped

--- a/HibernateTest/WebTest.Data/WebTest.Data.csproj
+++ b/HibernateTest/WebTest.Data/WebTest.Data.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ProductMap.cs" />
+    <Compile Include="ProductPriceMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
