--- a/HibernateTest/WebTest.Data/WebTest.Data.csproj
+++ b/HibernateTest/WebTest.Data/WebTest.Data.csproj
@@ -35,7 +35,7 @@
       <HintPath>..\lib\FluentNHibernate.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate">
-      <HintPath>..\..\..\..\aida\trunk\PhotoKiosk\src\PhotoKiosk\lib\NHibernate.dll</HintPath>
+      <HintPath>..\lib\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
